# o80_example

./: #CMakeLists.txt#  CMakeLists.txt  README.md  package.xml  readme.md
.github/workflows/: python_flake8.yml  python_mypy.yml
debian/: control
demos/: bursting.py  check_backend_frequency.py  delay.py  duration_commands.py  full_trajectory.py  instant_commands.py  introspection.py  low_resolution_trajectory.py  mirroring.py  relative_iteration.py  replay.py  speed_commands.py  standalone_backend.py  standalone_backend_bursting.py
demos/bursting/: bursting_demo.py  standalone_backend_bursting.py
doc/: 01_installation.md  02_demos.md  03_tutorial.md
include/o80_example/: action.hpp  driver.hpp  driver_in.hpp  driver_out.hpp  joint.hpp  joint2d.hpp  standalone.hpp
python/o80_example/: __init__.py
src/: driver.cpp  driver_in.cpp  driver_out.cpp  joint.cpp  standalone.cpp
srcpy/: wrappers.cpp
tests/: unit_tests.cpp
